--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ p {
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    margin-inline-ends: 0px;
 }
 
     .text-center {
@@ -122,15 +122,66 @@ p {
         margin-top: 0.5rem;
         margin-bottom: rem;
     }
-    
-    img.zuri-training-svg img{
+    .my-container{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    img.zuri-training-svg{
+        vertical-align: left;
+        margin: 7rem 0;
+        width: 60%;
+        height: 60%;
+    }
+    .col{
+        background-color: #fffafa;
+        font-size: 0.9rem;
+        line-height: 2.4rem;
+        text-align: left;
+        margin: 3rem;
+        padding: 10rem 6rem;
+        margin-right: 7.5rem;
+        opacity: 0.9;
+    }
+    .col p{
+        opacity: 0.9;
+        margin-bottom: 4rem;
+    }
+    .col h3{
+        margin-bottom: 4rem;
+        
+    }
+
+.footer-flex-container{
+    display: flex;
+flex-direction: column;
+justify-content: center;
+}
+.flex-1, .flex-2, .flex-3, .flex-4{
+    font-size: 3.5rem;
+  margin: 2rem auto;  
+  text-align: center;
+  opacity: 0.9;
+  padding: 2rem;
+}
+.flex-3 h3{
+    font-size: 4.5rem;
+    font-weight: 700;
+}
+.flex-3 p{
+    font-size: 2.3rem;
+    opacity: 0.9;
+}
+/*     
+    img.zuri-training-svg{
    
-        /* vertical-align: middle; */
+        /* vertical-align: middle;
         width: 30%;
         height: 30%;
-;
-    }
-    .my-container.program-card img {
+        margin: 4rem;
+        
+    } */
+    /* .my-container.program-card img {
         margin-bottom: 5rem;
     }
     img {
@@ -163,7 +214,7 @@ p {
 justify-content: center;
 margin-left: 4rem;
 margin-right: auto ;
-}
+} */
 
 
 
@@ -179,13 +230,13 @@ img.logo-img{
   padding-top: 16px;
   margin:16px auto;
   margin-bottom: 20px;
-  /* vertical-align: middle; */
+   vertical-align: middle;
   width: 100px;
   height: 100px;
 }
 img{
     display: block;
-    /* vertical-align: middle; */
+     vertical-align: middle; 
  
 }
 .learnBG{
